<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/paddin_pantalla"
    android:gravity="center"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:text="@string/texto_intro"
        android:id="@+id/texto_bienvenida"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="@dimen/top_elemento"
        android:id="@+id/edit_nombre"
        android:hint="@string/hint_edit_nombre"
        android:inputType="text"
        android:drawableLeft="@drawable/people"
        android:drawablePadding="@dimen/paddin_pantalla"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="@dimen/top_elemento"
        android:id="@+id/edit_telefono"
        android:hint="@string/hint_edit_telefono"
        android:inputType="phone"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="@dimen/paddin_pantalla"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_elemento"
        android:gravity="center"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_pulsar"
            android:id="@+id/boton_pulsar"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/texto_vaciar"
            android:id="@+id/boton_vaciar"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>




</androidx.appcompat.widget.LinearLayoutCompat>